{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "Player",
            "id": "b59a37cf-229f-48c3-b634-cafcd5ea9103",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "75098b31-15af-45ee-9168-0ac3da9e791c",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "FormationChange",
                    "type": "Button",
                    "id": "51ff045e-4eed-4cc3-807b-095cdbe4481f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Look",
                    "type": "Value",
                    "id": "473869ae-12fc-4212-9d8a-ddf10d7150e0",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "SelectTeamMate",
                    "type": "Button",
                    "id": "f1fbc362-ba36-4252-a5a7-e3b407c5a041",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "DeselectTeam",
                    "type": "Button",
                    "id": "932022df-13d1-485d-a330-fd159ff346ac",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "3f168e56-4cf7-4297-b5da-e87404f6f51b",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "34815341-2966-4a00-9bda-90522326c451",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "8ace7e9d-4987-4ea5-b22f-232f43ed7ab6",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "f52b0261-0071-4362-9dfe-a9db6b8131f5",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "380cc205-f900-4f64-8ebe-0a0212c2b14d",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "e2ec45e2-1e7d-4929-a37a-ded55936b19c",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FormationChange",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a04be5b0-d761-4a8f-aa6f-d1fb23b35bd4",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ae7c1a90-2245-42af-aeef-212db2949674",
                    "path": "<Keyboard>/t",
                    "interactions": "Tap",
                    "processors": "",
                    "groups": "",
                    "action": "SelectTeamMate",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f77c7dac-4489-42e0-8892-c67d8ad8be7c",
                    "path": "<Keyboard>/t",
                    "interactions": "MultiTap",
                    "processors": "",
                    "groups": "",
                    "action": "DeselectTeam",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}